--- a/.github/workflows/render-drawio.yml
+++ b/.github/workflows/render-drawio.yml
@@ -13,9 +13,10 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-    - uses: actions/checkout@v2
+    - uses: actions/checkout@v3
       with:
-        ref: ${{ github.head_ref }}
+        fetch-depth: 0
+        token: ${{ secrets.GITHUB_TOKEN }}
 
     - uses: rlespinasse/drawio-export-action@v2
       with:
