--- a/.github/workflows/render-drawio.yml
+++ b/.github/workflows/render-drawio.yml
@@ -24,11 +24,12 @@ jobs:
         path: ./hbr.drawio
         output: ./hbr-relationship.png
     
-    - uses: stefanzweifel/git-auto-commit-action@v5
+    - name: Get author and committer info from HEAD commit
+      uses: rlespinasse/git-commit-data-action@v1
+      if: github.ref == 'refs/heads/master'
+
+    - name: Commit changed files
+      uses: stefanzweifel/git-auto-commit-action@v4
       with:
-        file_pattern: ./*.png
-        commit_message: "Update hbr-relationship.png"
-        commit_options: '--no-verify --signoff'
-        commit_user_name: ${{ github.actor }}
-        commit_user_email: ${{ github.actor }}@users.noreply.github.com
-        commit_author: ${{ github.actor }} <${{ github.actor }}@users.noreply.github.com>
+        commit_message: "docs: sync draw.io exported files"
+      if: github.ref == 'refs/heads/master'
