--- a/.github/workflows/render-drawio.yml
+++ b/.github/workflows/render-drawio.yml
@@ -18,6 +18,12 @@ jobs:
         fetch-depth: 0
         token: ${{ secrets.GITHUB_TOKEN }}
 
+    - name: replace timestamp in drawio files
+      run: |
+        timestamp=$(date +%Y%m%d.%H%M)
+        substitude="Version [0-9]*\.[0-9]*"
+        sed -i "s/${substitude}/Version ${timestamp}/g" docs/hbr.drawio
+
     - uses: rlespinasse/drawio-export-action@v2
       with:
         format: png
